k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lion-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: lion-db
  labels:
    access-to-db: allowed
