k8s/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lion-app
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
---
# 그라파나 서비스 설정 https 없어서 못함
# apiVersion: v1
# kind: Service
# metadata:
#   name: prometheus-stack-grafana
#   namespace: monitoring
# spec:
#   type: ClusterIP
#   ports:
#   - name: http
#     port: 80
#     targetPort: 3000
#   selector:
#     app.kubernetes.io/name: grafana
#     app.kubernetes.io/instance: prometheus-stack
# ---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: backend-servicemonitor
#   namespace: lion-app
#   labels:
#     release: prometheus-stack
# spec:
#   selector:
#     matchLabels:
#       app: backend
#   endpoints:
#   - port: http
#     path: /actuator/prometheus
#     interval: 15s
