k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lion-ingress
  namespace: lion-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: api.ajttk.com # Route 53에 등록된 실제 도메인 주소 기입
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
---
# 그라파나 Ingress 설정 (https 없어서 못함)
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: grafana-ingress
#   namespace: monitoring
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: grafana.ajttk.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: prometheus-stack-grafana
#             port:
#               number: 80

# # 로컬 테스트용
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: todo-ingress
#   namespace: lion-app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: finance.local
#       http:
#         paths:
#           # 1. API 요청 (/api) -> Backend Service
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 8080
#           # 2. 정적 웹 요청 (/) -> Frontend Service
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 80
